# thermal-printer

./: .gitmodules  Cargo.toml  README.md
src/: icons.rs  main.rs
src/backends/: mod.rs
src/backends/cosmic/: helpers.rs  mod.rs  welcome.rs
src/backends/egui/: mod.rs
src/state/: action.rs  image.rs  mod.rs
src/windows/: mod.rs  welcome.rs
